Update de-De, de-CH and pl-PL language files.

--- a/openBVE/OpenBve/Data/Languages/de-CH.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-CH.cfg
@@ -28,19 +28,19 @@ expert = Experte
 unknown = Unbekannt
 
 [errors]
-critical_file = A critical error occured whilst parsing the [file] file
-filesystem_invalid = The file system configuration could not be accessed or is invalid due to the following reason:
-warning = Warning:
-controls_missing = No control configuration files found.
-controls_oldversion = An older key-configuration file was found.
-controls_reset = The current key-configuration has been reset to defaults.
-controls_default_oldversion = The default key assingment file is an older version or corrupt.
-controls_default_missing = The default key assignment file does not exist.
-sound_openal_version = OpenAL 1.1 is required. You seem to have version 1.0.
-sound_openal_context = The OpenAL context could not be created.
-sound_openal_device = The OpenAL sound device could not be opened.
-fullscreen_switch1 = An error occured whilst attempting to switch to fullscreen mode. 
-fullscreen_switch2 = Please check your fullscreen resolution settings.
+critical_file = Beim Parsen der Datei [file] ist ein kritischer Fehler aufgetreten.
+filesystem_invalid = Die Konfiguration des Dateisystems konnte nicht geöffnet werden oder ist fehlerhaft. Grund:
+warning = Warnung:
+controls_missing = Keine Steuerungskonfigurationsdatei gefunden.
+controls_oldversion = Tastaturkonfiguration einer älteren Programmversion gefunden.
+controls_reset = Die Tastatureinstellungen wurden auf Voreinstellungen zurückgesetzt.
+controls_default_oldversion = Die Standardtastatureinstellungsdatei ist für eine ältere Programmversion.
+controls_default_missing = Die Standardtastatureinstellungsdatei ist nicht vorhanden.
+sound_openal_version = OpenAL 1.1 wird benötigt; es scheint OpenAL 1.0 vorhanden zu sein.
+sound_openal_context = Der 'OpenAL context' konnte nicht eröffnet werden.
+sound_openal_device = Das 'OpenAL sound device' konnte nicht geöffnet werden.
+fullscreen_switch1 = Beim Versuch, in den Vollbildmodus zu wechseln, ist ein Fehler aufgetreten.
+fullscreen_switch2 = Bitte die eingestellte Vollbildauflösung kontrollieren.
 
 [start]
 title = Neues Spiel starten
