--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -28,19 +28,19 @@ expert = Ekspert
 unknown = Nieznany
 
 [errors]
-critical_file = A critical error occured whilst parsing the [file] file
-filesystem_invalid = The file system configuration could not be accessed or is invalid due to the following reason:
-warning = Warning:
-controls_missing = No control configuration files found.
-controls_oldversion = An older key-configuration file was found.
-controls_reset = The current key-configuration has been reset to defaults.
-controls_default_oldversion = The default key assingment file is an older version or corrupt.
-controls_default_missing = The default key assignment file does not exist.
-sound_openal_version = OpenAL 1.1 is required. You seem to have version 1.0.
-sound_openal_context = The OpenAL context could not be created.
-sound_openal_device = The OpenAL sound device could not be opened.
-fullscreen_switch1 = An error occured whilst attempting to switch to fullscreen mode. 
-fullscreen_switch2 = Please check your fullscreen resolution settings.
+critical_file = Wystąpił krytyczny błąd przy wczytywaniu pliku [file].
+filesystem_invalid = Brak dostępu do lub błędna konfiguracja systemu plików z następującego powodu:
+warning = Uwaga:
+controls_missing = Nie znaleziono pliku konfiguracji sterowania.
+controls_oldversion = Znaleziono konfigurację klawiszy starej wersii programu.
+controls_reset = Aktualna konfiguracja klawiszy została przywrócona do domyślnej.
+controls_default_oldversion = Plik domyślnej konfiguracji klawiszy należy do starej wersii programu.
+controls_default_missing = Plik domyślnej konfiguracji klawiszy nie istnieje.
+sound_openal_version = Wymagane jest OpenAL 1.1. Zdajesz się mieć wersię 1.0.
+sound_openal_context = Nie udało się utworzyć 'OpenAL context'.
+sound_openal_device = Nie udało się otworzyć 'OpenAL sound device'.
+fullscreen_switch1 = Wystąpił błąd przy próbie przejścia w tryb pełnoekranowy.
+fullscreen_switch2 = Proszę sprawdzić swoje ustawienia rozdzielczości trybu pełnoekranowego.
 
 [start]
 title = Nowa gra
