Add the program title- "openBVE" as a translatable string.

--- a/openBVE/OpenBve/Data/Languages/de-CH.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-CH.cfg
@@ -2,6 +2,9 @@
 ; übersetzt von Jan Henning
 ; last updated: 2011-12-23
 
+[program]
+title = openBVE
+
 [language]
 name = Deutsch (Schweiz)
 flag = CH.png
