--- a/openBVE/OpenBve/Data/Languages/en-US.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-US.cfg
@@ -1,6 +1,9 @@
 ﻿; openBVE interface language configuration file
 ; last updated: 2009-06-29
 
+[program]
+title = openBVE
+
 [language]
 name = English (United States)
 flag = US.png
