--- a/openBVE/OpenBve/Data/Languages/fi-FI.cfg
+++ b/openBVE/OpenBve/Data/Languages/fi-FI.cfg
@@ -1,6 +1,9 @@
 ﻿; openBVE interface language configuration file
 ; last updated: 2012-04-13
 
+[program]
+title = openBVE
+
 [language]
 name = Suomi
 flag = FI.png
