--- a/openBVE/OpenBve/Data/Languages/fr-FR.cfg
+++ b/openBVE/OpenBve/Data/Languages/fr-FR.cfg
@@ -2,6 +2,9 @@
 ; with keyboard used in France
 ; last updated: 2011-12-23
 
+[program]
+title = openBVE
+
 [language]
 name = Français
 flag = FR.png
