--- a/openBVE/OpenBve/Data/Languages/it-IT.cfg
+++ b/openBVE/OpenBve/Data/Languages/it-IT.cfg
@@ -1,6 +1,9 @@
 ﻿; openBVE interface language configuration file
 ; last updated: 2011-12-21
 
+[program]
+title = openBVE
+
 [language]
 name = Italiano
 flag = IT.png
