--- a/openBVE/OpenBve/Data/Languages/ja-JP.cfg
+++ b/openBVE/OpenBve/Data/Languages/ja-JP.cfg
@@ -1,6 +1,9 @@
 ﻿; openBVE interface language configuration file
 ; last updated: 2009-08-03
 
+[program]
+title = openBVE
+
 [language]
 name = 日本語
 flag = JP.png
