--- a/openBVE/OpenBve/Data/Languages/ko-KR.cfg
+++ b/openBVE/OpenBve/Data/Languages/ko-KR.cfg
@@ -3,6 +3,9 @@
 ; Version: 1.2.6.3(stable)
 ; Translated by HIDDEN-CATCH ( hidcatch.subtitle.kr )
 
+[program]
+title = openBVE
+
 [language]
 name = 한국어
 flag = KR.png
