--- a/openBVE/OpenBve/Data/Languages/nl-NL.cfg
+++ b/openBVE/OpenBve/Data/Languages/nl-NL.cfg
@@ -1,6 +1,9 @@
 ﻿; openBVE interface language configuration file
 ; last updated: 23-12-2011
 
+[program]
+title = openBVE
+
 [language]
 name = Nederlands (standaard)
 flag = NL.png
