--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -2,6 +2,9 @@
 ; Polskie tłumaczenie wykonane przez piotrulos (Kosmo14). Jeśli widzisz błędy to napisz piotr.wwww@gmail.com
 ; last updated: 2011-12-21
 
+[program]
+title = openBVE
+
 [language]
 name = Polski
 flag = PL.png
