--- a/openBVE/OpenBve/Data/Languages/pt-BR.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-BR.cfg
@@ -2,6 +2,9 @@
 ; Translated by Chico (oBom) a partir do pt-PT.cfg Translated by ALP (Ducatista)
 ; last updated: 2009-03-26
 
+[program]
+title = openBVE
+
 [language]
 name = Português (Brasil)
 flag = BR.png
