--- a/openBVE/OpenBve/Data/Languages/pt-PT.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-PT.cfg
@@ -2,6 +2,9 @@
 ; Translated by ALP (Ducatista)
 ; last updated: 2011-12-21
 
+[program]
+title = openBVE
+
 [language]
 name = Português (Portugal)
 flag = PT.png
