--- a/openBVE/OpenBve/Data/Languages/ro-RO.cfg
+++ b/openBVE/OpenBve/Data/Languages/ro-RO.cfg
@@ -2,6 +2,9 @@
 ; Translation made by cool2010
 ; last updated: 2011-12-24
 
+[program]
+title = openBVE
+
 [language]
 name = Română
 flag = RO.png
