--- a/openBVE/OpenBve/Data/Languages/ru-RU.cfg
+++ b/openBVE/OpenBve/Data/Languages/ru-RU.cfg
@@ -1,6 +1,9 @@
 ﻿; openBVE interface language configuration file
 ; last updated: 2010-04-12
 
+[program]
+title = openBVE
+
 [language]
 name = Русский
 flag = RU.png
