--- a/openBVE/OpenBve/Data/Languages/uk-UA.cfg
+++ b/openBVE/OpenBve/Data/Languages/uk-UA.cfg
@@ -3,6 +3,9 @@
 звертатися на deemuss@mail.ua
 ; last updated: 2012-04-08
 
+[program]
+title = openBVE
+
 [language]
 name = Українська
 flag = UA.png
