--- a/openBVE/OpenBve/Data/Languages/zh-CN.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-CN.cfg
@@ -2,6 +2,9 @@
 ; Last updated/最后更新: 2012-07-04
 ; Translated by Alvin Wong/由 Alvin Wong 翻译
 
+[program]
+title = openBVE
+
 [language]
 name = 中文 (大陆简体)
 flag = CN.png
