--- a/openBVE/OpenBve/Data/Languages/zh-HK.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-HK.cfg
@@ -4,6 +4,9 @@
 ; 2012-02-21: Translated by Alvin Wong/由 Alvin Wong 翻譯
 ; last updated: 2012-07-04
 
+[program]
+title = openBVE
+
 [language]
 name = 中文 (港澳繁體)
 flag = HK.png
