--- a/openBVE/OpenBve/Data/Languages/zh-TW.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-TW.cfg
@@ -3,6 +3,9 @@
 ; 由 I-Circle BVE 網翻譯 (http://bve.i-circle.net)
 ; last updated: 2009-07-30
 
+[program]
+title = openBVE
+
 [language]
 name = 中文 (台灣正體)
 flag = TW.png
