Synchronize language files.
- Adds a few missing strings for the in-game menu.
- Makes all files parallel with the same number of lines in the same place, easing future insertions.
- Ukrainian: fixed several strings which were split across multiple lines.
- Italian: corrected accented vowels, translated un-translated strings, corrected a few typos.

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -392,6 +392,9 @@ quit = Surt
 quit_question = Segur que voleu sortir?
 quit_no = No
 quit_yes = Sí
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
