--- a/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
+++ b/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
@@ -392,6 +392,9 @@ quit = Ukončit
 quit_question = Ukončit openBVE?
 quit_no = Ne
 quit_yes = Ano
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
