--- a/openBVE/OpenBve/Data/Languages/de-CH.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-CH.cfg
@@ -392,6 +392,9 @@ quit = Beenden
 quit_question = Willst du wirklich beenden?
 quit_no = Nein
 quit_yes = Ja
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
