--- a/openBVE/OpenBve/Data/Languages/en-US.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-US.cfg
@@ -1,5 +1,6 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2009-06-29
+; last updated: 2016-02-21
+; by 
 
 [program]
 title = openBVE
@@ -391,6 +392,9 @@ quit = Quit
 quit_question = Do you really want to quit?
 quit_no = No
 quit_yes = Yes
+back = ← Back
+customize_controls = Customize controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
