--- a/openBVE/OpenBve/Data/Languages/es-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/es-ES.cfg
@@ -43,6 +43,7 @@ sound_openal_version = Se necesita OpenAL 1.1. Parece que la versión actual es 
 sound_openal_context = No se pudo crear el contexto OpenAL.
 sound_openal_device = No se pudo abrir el dispositivo de sonido OpenAL.
 fullscreen_switch1 = Error al cambiar al modo de pantalla completa.
+fullscreen_switch2 = Please check your fullscreen resolution settings.
 
 [start]
 title = Nueva partida
@@ -391,6 +392,9 @@ quit = Cerrar
 quit_question = ¿Realmente desea salir?
 quit_no = No
 quit_yes = Sí
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
