--- a/openBVE/OpenBve/Data/Languages/fi-FI.cfg
+++ b/openBVE/OpenBve/Data/Languages/fi-FI.cfg
@@ -1,5 +1,6 @@
 ﻿; openBVE interface language configuration file
 ; last updated: 2012-04-13
+; by 
 
 [program]
 title = openBVE
@@ -391,6 +392,9 @@ quit = Poistu
 quit_question = Haluatko todella poistua?
 quit_no = Ei
 quit_yes = Kyllä
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
