--- a/openBVE/OpenBve/Data/Languages/fr-FR.cfg
+++ b/openBVE/OpenBve/Data/Languages/fr-FR.cfg
@@ -392,6 +392,9 @@ quit = Quitter
 quit_question = Voulez-vous quitter le jeu ?
 quit_no = Non
 quit_yes = Oui
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
