--- a/openBVE/OpenBve/Data/Languages/hu-HU.cfg
+++ b/openBVE/OpenBve/Data/Languages/hu-HU.cfg
@@ -1,5 +1,6 @@
 ﻿; openBVE interface language configuration file
 ; last updated: 2012-06-29
+; by 
 
 [program]
 title = openBVE
@@ -391,6 +392,9 @@ quit = Kilépés az openBVE-ből
 quit_question = Biztosan kilép a programból?
 quit_no = Nem
 quit_yes = Igen
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
