--- a/openBVE/OpenBve/Data/Languages/ja-JP.cfg
+++ b/openBVE/OpenBve/Data/Languages/ja-JP.cfg
@@ -1,5 +1,6 @@
 ﻿; openBVE interface language configuration file
 ; last updated: 2009-08-03
+; by 
 
 [program]
 title = openBVE
@@ -391,6 +392,9 @@ quit = 終了
 quit_question = 終了しますか？
 quit_no = いいえ
 quit_yes = はい
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
@@ -417,7 +421,6 @@ backward = 後
 ;power = 力行
 power = 力
 powernull = 切
-;brake = 制動
 brake = 制
 brakenull = 切
 release = 解除
