--- a/openBVE/OpenBve/Data/Languages/ko-KR.cfg
+++ b/openBVE/OpenBve/Data/Languages/ko-KR.cfg
@@ -1,7 +1,6 @@
 ﻿; openBVE interface language configuration file
 ; Last Updated: 2009-12-07
-; Version: 1.2.6.3(stable)
-; Translated by HIDDEN-CATCH ( hidcatch.subtitle.kr )
+; Version: 1.2.6.3(stable) . Translated by HIDDEN-CATCH ( hidcatch.subtitle.kr )
 
 [program]
 title = openBVE
@@ -393,6 +392,9 @@ quit = 종료
 quit_question = 종료하시겠습니까?
 quit_no = 아니오
 quit_yes = 예
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
