--- a/openBVE/OpenBve/Data/Languages/nl-NL.cfg
+++ b/openBVE/OpenBve/Data/Languages/nl-NL.cfg
@@ -1,5 +1,6 @@
 ﻿; openBVE interface language configuration file
 ; last updated: 23-12-2011
+; by 
 
 [program]
 title = openBVE
@@ -391,6 +392,9 @@ quit = Afsluiten
 quit_question = Weet je zeker dat je wilt afsluiten?
 quit_no = Nee
 quit_yes = Ja
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
