--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -392,6 +392,9 @@ quit = Wyjdź z gry
 quit_question = Czy chcesz wyjść z gry?
 quit_no = Nie
 quit_yes = Tak
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
