--- a/openBVE/OpenBve/Data/Languages/pt-PT.cfg
+++ b/openBVE/OpenBve/Data/Languages/pt-PT.cfg
@@ -392,6 +392,9 @@ quit = Sair do jogo
 quit_question = Quer mesmo sair do jogo?
 quit_no = Não
 quit_yes = Sim
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
