--- a/openBVE/OpenBve/Data/Languages/ro-RO.cfg
+++ b/openBVE/OpenBve/Data/Languages/ro-RO.cfg
@@ -392,6 +392,9 @@ quit = Închidere Simulare
 quit_question = Chiar vrei să iesi?
 quit_no = Nu
 quit_yes = Da
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
