--- a/openBVE/OpenBve/Data/Languages/ru-RU.cfg
+++ b/openBVE/OpenBve/Data/Languages/ru-RU.cfg
@@ -1,5 +1,6 @@
 ﻿; openBVE interface language configuration file
 ; last updated: 2010-04-12
+; by 
 
 [program]
 title = openBVE
@@ -391,6 +392,9 @@ quit = Выйти
 quit_question = Вы действительно хотите выйти?
 quit_no = Нет
 quit_yes = Да
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
