--- a/openBVE/OpenBve/Data/Languages/uk-UA.cfg
+++ b/openBVE/OpenBve/Data/Languages/uk-UA.cfg
@@ -1,6 +1,5 @@
 ﻿; openBVE interface language configuration file
-; Український переклад Дмитра Амельчева (Дніпропетровськ). З питаннями
-звертатися на deemuss@mail.ua
+; Український переклад Дмитра Амельчева (Дніпропетровськ). З питаннями звертатися на deemuss@mail.ua
 ; last updated: 2012-04-08
 
 [program]
@@ -15,15 +14,14 @@ flag = UA.png
 [panel]
 start = Нова гра
 review = Перегляд останньої гри
+getaddons = Get Add-ons
 controls = Установки клавіш
 options = Опції
 homepage = Офіційний сайт
 updates = Перевірити оновлення
-updates_invalid = Існує з’єднання із сервером, проте неможливо отримати
-інформацію про нові версії...
+updates_invalid = Існує з’єднання із сервером, проте неможливо отримати інформацію про нові версії...
 updates_old = Дана версія є найновішою
-updates_new = Нова версія [version] ([date]) доступна для скачування з
-офіційного сайту. Зміни в останній версії:\r\n\r\n
+updates_new = Нова версія [version] ([date]) доступна для скачування з офіційного сайту. Зміни в останній версії:\r\n\r\n
 close = Закрити
 
 [mode]
@@ -51,6 +49,7 @@ fullscreen_switch2 = Please check your fullscreen resolution settings.
 title = Нова гра
 route = Маршрут
 route_selection = Обрання маршруту
+route_addons = Add-ons
 route_browse = Навіґація
 route_recently = Останній використаний
 route_details = Деталі
@@ -73,9 +72,7 @@ train_settings = Установки
 train_settings_encoding = Кодування:
 train_settings_encoding_preview = Попередній перегляд:
 train_notfound = Поїзд для цього машруту не знайдено:\x20
-train_pluginnotsupported = --- Цей поїзд використовує систему безпеки, котру не
-обслуговує ваша система. Вмонтовані системи ATS/ATC можуть спричинити проблеми
-під час керування. ---
+train_pluginnotsupported = --- Цей поїзд використовує систему безпеки, котру не обслуговує ваша система. Вмонтовані системи ATS/ATC можуть спричинити проблеми під час керування. ---
 start = Старт
 start_mode = Тип Їзди:
 start_start = Старт
@@ -147,11 +144,9 @@ other_cities = Інші міста
 other_operators = Інші перевізники
 suggest_1 = Пропоновані додатки на підставі вашого вибору:
 suggest_2 = Встановити зараз?
-redundant_1 = Наступні додатки не працюватимуть належним чином чи будуть більше
-непотрібні після видалення обраних додатків:
+redundant_1 = Наступні додатки не працюватимуть належним чином чи будуть більше непотрібні після видалення обраних додатків:
 redundant_2 = Видалити ці додатки?
-confirmation = Для встановлення обраного додатку, буде завантажено [size].
-Продовжити?
+confirmation = Для встановлення обраного додатку, буде завантажено [size]. Продовжити?
 
 [controls]
 title = Установки клавіш
@@ -179,13 +174,9 @@ selection_keyboard_modifiers_ctrl = Ctrl
 selection_keyboard_modifiers_alt = Alt
 selection_joystick = Joystick
 selection_joystick_assignment = Завдання:
-selection_joystick_assignment_grab = Клацніть тут аби активувати автоматичне
-налаштування джойстика.\r\n\r\nУвага! Перезавантажте усі функції до нейтрального
-положення й відпустіть усі кнопки перед налаштуванням.
-selection_joystick_assignment_grab_normal = Натисніть брану кнопку lub przesuń
-gałke w wybranym kierunku...
-selection_joystick_assignment_grab_fullaxis = Przesuń gałkę w wybranym
-kierunku...
+selection_joystick_assignment_grab = Клацніть тут аби активувати автоматичне налаштування джойстика.\r\n\r\nУвага! Перезавантажте усі функції до нейтрального положення й відпустіть усі кнопки перед налаштуванням.
+selection_joystick_assignment_grab_normal = Натисніть брану кнопку lub przesuń gałke w wybranym kierunku...
+selection_joystick_assignment_grab_fullaxis = Przesuń gałkę w wybranym kierunku...
 attached = Zainstalowane joysticki
 assignment_keyboard = Klawiatura
 assignment_keyboard_shift = Shift +\x20
@@ -305,13 +296,8 @@ loading_route = Завантаження маршруту...
 loading_train = Завантаження поїзду...
 almost = Усе готове до старту
 almost_filesnotfound = Файли не знайдено:
-almost_help_filesnotfound = Під час завантаження сталися помилки.\r\n\r\nКілька
-Файлів не знайдено, маршрут або поїзд може невірно працювати. Спробуйте знову
-скачати файл поїзда.\r\n\r\nСписок показує додаткову інформацію. Клацніть
-"Ігнорувати" аби продовжити.
-almost_help_general = Сталися проблеми під час завантаження маршруту. Якщо ви
-розробник цього маршруту, можете подивитися список проблем.\r\n\r\nЯкщо Ви
-гравець, клацніть "Ігнорувати" аби продовжити.
+almost_help_filesnotfound = Під час завантаження сталися помилки.\r\n\r\nКілька Файлів не знайдено, маршрут або поїзд може невірно працювати. Спробуйте знову скачати файл поїзда.\r\n\r\nСписок показує додаткову інформацію. Клацніть "Ігнорувати" аби продовжити.
+almost_help_general = Сталися проблеми під час завантаження маршруту. Якщо ви розробник цього маршруту, можете подивитися список проблем.\r\n\r\nЯкщо Ви гравець, клацніть "Ігнорувати" аби продовжити.
 almost_show = Показати проблеми
 problems = Проблеми
 problems_type = Тип
@@ -329,14 +315,10 @@ departuretime = Відправлення
 
 [message]
 delimiter = \x20
-signal_proceed = Можна їхати на швидкості [speed] км/г із максимальною
-обережністю.
-signal_stop = Ви проїхали на червоне світло. Будь ласка, задійте аварійне
-гальмування.
-signal_overspeed = Обмеження швидкості за семафором [limit] км/г. Ви маєте
-[speed] км/г. Скиньте швидкість!
-route_overspeed = Обмеження швидкості складає [limit] км/г. Ви маєте [speed]
-км/г. Скиньте швидкість!
+signal_proceed = Можна їхати на швидкості [speed] км/г із максимальною обережністю.
+signal_stop = Ви проїхали на червоне світло. Будь ласка, задійте аварійне гальмування.
+signal_overspeed = Обмеження швидкості за семафором [limit] км/г. Ви маєте [speed] км/г. Скиньте швидкість!
+route_overspeed = Обмеження швидкості складає [limit] км/г. Ви маєте [speed] км/г. Скиньте швидкість!
 station_arrival = Станція: [name].
 station_arrival_late = Прибуття на станцію [name] на [time] пізніше від графіку.
 station_arrival_early = Прибуття на станцію [name] на [time] раніше від графіку.
@@ -349,8 +331,7 @@ station_correct = Будь ласка виправте позицію зупин
 station_depart_closedoors = Можна зачинити двері і рушати.
 station_depart = Можна рушати.
 station_passed = Ви проминули станцію [name], де ви мали зупинитися.
-station_passed_boarding = Ви проминули станцію [name], де чекають на посадку
-пасажири. Зупиніть поїзд.
+station_passed_boarding = Ви проминули станцію [name], де чекають на посадку пасажири. Зупиніть поїзд.
 loading = Завантаження. Зачекайте, будь ласка...
 
 [notification]
@@ -411,6 +392,9 @@ quit = Вийти з гри
 quit_question = Чи бажаєте вийти з гри?
 quit_no = Ні
 quit_yes = Так
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
@@ -456,26 +440,18 @@ score = Punkty:\x20
 [commands]
 POWER_INCREASE = Збільшує потужність на один рівень для поїздів з двома важелями
 POWER_DECREASE = Зменшує потужність на один рівень для поїздів з двома важелями
-POWER_HALFAXIS = Контролює потужність для поїздів з двома важелями для джойстика
-на половину вісі
+POWER_HALFAXIS = Контролює потужність для поїздів з двома важелями для джойстика на половину вісі
 POWER_FULLAXIS = Контролює потужність для поїздів з двома важелями для джойстика
-BRAKE_DECREASE = Зменшує силу гальмування на один рівень для поїздів з двома
-важелями
-BRAKE_INCREASE = Збільшує силу гальмування на один рівень для поїздів з двома
-важелями
-BRAKE_HALFAXIS = Контролює силу гальмування для поїздів з двома важелями для
-джойстика на половину вісі
-BRAKE_FULLAXIS = Контролює силу гальмування для поїздів з двома важелями для
-джойстика
+BRAKE_DECREASE = Зменшує силу гальмування на один рівень для поїздів з двома важелями
+BRAKE_INCREASE = Збільшує силу гальмування на один рівень для поїздів з двома важелями
+BRAKE_HALFAXIS = Контролює силу гальмування для поїздів з двома важелями для джойстика на половину вісі
+BRAKE_FULLAXIS = Контролює силу гальмування для поїздів з двома важелями для джойстика
 BRAKE_EMERGENCY = Активує аварійні гальма для поїздів з двома важелями
-SINGLE_POWER = Змінює важелі прискорення на одну позицію для поїздів з одним
-важелем
+SINGLE_POWER = Змінює важелі прискорення на одну позицію для поїздів з одним важелем
 SINGLE_NEUTRAL = Встановлює нейтральну позицію для поїздів з одним важелем
-SINGLE_BRAKE = Змінює важелі прискорення гальмування на одну позицію для поїздів
-з одним важелем
+SINGLE_BRAKE = Змінює важелі прискорення гальмування на одну позицію для поїздів з одним важелем
 SINGLE_EMERGENCY = Активація аварійних гальм для поїздів з одним важелем
-SINGLE_FULLAXIS = Контроль прискорення і гальмування для поїздів з одним важелем
-(Джойстик)
+SINGLE_FULLAXIS = Контроль прискорення і гальмування для поїздів з одним важелем (Джойстик)
 REVERSER_FORWARD = Реверс: позиція вперед
 REVERSER_BACKWARD = Реверс: позиція назад
 REVERSER_FULLAXIS = Контроль реверса через джойстик
@@ -523,8 +499,7 @@ CAMERA_ZOOM_OUT = Zoom -
 CAMERA_POI_PREVIOUS = Перехід до попереднього пункту маршруту
 CAMERA_POI_NEXT = Перехід до наступного пункту маршруту
 CAMERA_RESET = Reset камери до нормальної позиції
-CAMERA_RESTRICTION = Активація або деактивація внутрішнього обмеження виду
-камери
+CAMERA_RESTRICTION = Активація або деактивація внутрішнього обмеження виду камери
 TIMETABLE_TOGGLE = Інші режими розкладу
 TIMETABLE_UP = Пересунути розклад догори
 TIMETABLE_DOWN = Пересунути розклад донизу
