--- a/openBVE/OpenBve/Data/Languages/zh-CN.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-CN.cfg
@@ -392,6 +392,9 @@ quit = 离开
 quit_question = 是否要离开游戏？
 quit_no = 否
 quit_yes = 是
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
