--- a/openBVE/OpenBve/Data/Languages/zh-HK.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-HK.cfg
@@ -1,7 +1,5 @@
-﻿; openBVE interface language configuration file
-; Chinese (Hong Kong)
-; 由 I-Circle BVE 網翻譯 (http://bve.i-circle.net)
-; 2012-02-21: Translated by Alvin Wong/由 Alvin Wong 翻譯
+﻿; openBVE interface language configuration file / Chinese (Hong Kong)
+; 2012-02-21: Translated by Alvin Wong/由 Alvin Wong 翻譯由 | I-Circle BVE 網翻譯 (http://bve.i-circle.net)
 ; last updated: 2012-07-04
 
 [program]
@@ -394,6 +392,9 @@ quit = 離開
 quit_question = 是否要離開遊戲？
 quit_no = 否
 quit_yes = 是
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
