--- a/openBVE/OpenBve/Data/Languages/zh-TW.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-TW.cfg
@@ -1,5 +1,4 @@
-﻿; openBVE interface language configuration file
-; Traditional Chinese (Taiwan)
+﻿; openBVE interface language configuration file / Traditional Chinese (Taiwan)
 ; 由 I-Circle BVE 網翻譯 (http://bve.i-circle.net)
 ; last updated: 2009-07-30
 
@@ -393,6 +392,9 @@ quit = 離開
 quit_question = 是否要離開遊戲？
 quit_no = 否
 quit_yes = 是
+back = ← Back
+customize_controls = Customise controls
+assign = Please press any key or move a joystick axis to set this control...
 
 ; ----- quick reference -----
 
