--- a/openBVE/OpenBve/Data/Languages/en-US.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-US.cfg
@@ -382,6 +382,7 @@ rating = Your rating:
 unknown = Unknown
 
 [menu]
+back = ⇐ Back
 resume = Resume simulation
 jump = Jump to station
 exit = Exit to main menu
