Some tranlates added
Signed-off-by: V-Mint <v19930312@gmail.com>

--- a/openBVE/OpenBve/Data/Languages/ru-RU.cfg
+++ b/openBVE/OpenBve/Data/Languages/ru-RU.cfg
@@ -31,9 +31,9 @@ expert = Экспертный
 unknown = Неизвестный
 
 [errors]
-critical_file = A critical error occured whilst parsing the [file] file
+critical_file = Критическая ошибка при парсинге файла [file]
 filesystem_invalid = The file system configuration could not be accessed or is invalid due to the following reason:
-warning = Warning:
+warning = Предупреждение:
 controls_missing = No control configuration files found.
 controls_oldversion = An older key-configuration file was found.
 controls_reset = The current key-configuration has been reset to defaults.
@@ -72,7 +72,7 @@ train_settings = Кодировка
 train_settings_encoding = Выбрать:
 train_settings_encoding_preview = Предпросмотр:
 train_notfound = Состав указанный в маршруте не найден:\x20
-train_pluginnotsupported = --- This train uses a safety system plugin which cannot be used on your operating system. The built-in safety systems ATS/ATC will be used instead, which might cause operational problems. ---
+train_pluginnotsupported = --- Этот поезд использует плагин системы безопасности, несовместимый с вашей ОС. Будут использованы встроеные системы безопасности ATS/ATC, возможно возникновение проблем. ---
 start = Выбор режима вождения и запуск игры.
 start_mode = Режим вождения:
 start_start = Начать игру
