Remove separate install form, much tidying of UI. Note- Heavy WIP, do not do anything based upon this code!
TODO:
Version conflicts are not yet implemented.
Tidy package types- Switch to enum, possibly add libraries (signals, DLLs etc.)
Add configuration for extraction paths- Probably an option to choose the base content directory, then string in the package file.
Add trains.

--- a/openBVE/OpenBveApi/OpenBveApi.csproj
+++ b/openBVE/OpenBveApi/OpenBveApi.csproj
@@ -49,7 +49,12 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
+    <Reference Include="SharpCompress.Unsigned">
+      <HintPath>C:\Users\leeze_000\Desktop\sharpcompress-master\bin\SharpCompress.Unsigned.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Archives.cs" />
@@ -63,6 +68,7 @@
     <Compile Include="Math.cs" />
     <Compile Include="Objects.cs" />
     <Compile Include="Orientation3.cs" />
+    <Compile Include="Packages.cs" />
     <Compile Include="Path.cs" />
     <Compile Include="Runtime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
